--- a/binary_source/degeneracy_fit.ipynb
+++ b/binary_source/degeneracy_fit.ipynb
@@ -1502,6 +1502,111 @@
     "    show_residual=True,\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "0c939a4e-975e-4ed0-8c73-94cb6709c05c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved: scan_kepler_u0_000.npz\n",
+      "Saved: scan_kepler_u0_001.npz\n",
+      "Saved: scan_kepler_u0_002.npz\n",
+      "Saved: scan_kepler_u0_003.npz\n",
+      "Saved: scan_kepler_u0_004.npz\n",
+      "Saved: scan_kepler_u0_005.npz\n",
+      "Saved: scan_kepler_u0_006.npz\n",
+      "Saved: scan_kepler_u0_007.npz\n",
+      "Saved: scan_kepler_u0_008.npz\n",
+      "Saved: scan_kepler_u0_009.npz\n",
+      "Saved: scan_kepler_u0_010.npz\n",
+      "Saved: scan_kepler_u0_011.npz\n",
+      "Saved: scan_kepler_u0_012.npz\n",
+      "Saved: scan_kepler_u0_013.npz\n",
+      "Saved: scan_kepler_u0_014.npz\n",
+      "Saved: scan_kepler_u0_015.npz\n",
+      "Saved: scan_kepler_u0_016.npz\n",
+      "Saved: scan_kepler_u0_017.npz\n",
+      "Saved: scan_kepler_u0_018.npz\n",
+      "Saved: scan_kepler_u0_019.npz\n",
+      "Saved: scan_kepler_u0_020.npz\n",
+      "Saved: scan_kepler_u0_021.npz\n",
+      "Saved: scan_kepler_u0_022.npz\n",
+      "Saved: scan_kepler_u0_023.npz\n",
+      "Saved: scan_kepler_u0_024.npz\n",
+      "scan on u0 finished (lambda_xi fixed to pi/2).\n"
+     ]
+    }
+   ],
+   "source": [
+    "from degeneracy_fit import run_grid_and_save_npz_kepler\n",
+    "import numpy as np\n",
+    "\n",
+    "# ============================================================\n",
+    "# time grid\n",
+    "# ============================================================\n",
+    "t = np.linspace(-500, 500, 5000)\n",
+    "\n",
+    "# ============================================================\n",
+    "# \"truth\" PSPL params (base)\n",
+    "# ============================================================\n",
+    "t0_true = 50.0\n",
+    "tE_true = 173.0\n",
+    "\n",
+    "# ============================================================\n",
+    "# orbital / xallarap angles (fixed)\n",
+    "# ============================================================\n",
+    "phi_true = 0.0\n",
+    "theta_true = 0.0\n",
+    "qflux_true = 0.0\n",
+    "lambda_xi_fixed = 0.5*np.pi   # <-- fijo: pi/2\n",
+    "\n",
+    "# ============================================================\n",
+    "# physical system (fixed)\n",
+    "# ============================================================\n",
+    "M1 = 2.0\n",
+    "M2 = 1.0\n",
+    "rEhat = 5.0\n",
+    "\n",
+    "# scan in P as before\n",
+    "P_grid = np.logspace(1, 5, 60)  # 10 d → 100000 d\n",
+    "\n",
+    "# ============================================================\n",
+    "# [NUEVO] scan in u0\n",
+    "# ============================================================\n",
+    "N_u0 = 25\n",
+    "u0_grid = np.linspace(0.01, 1.0, N_u0)   # elegí rango; ajustalo a tu caso\n",
+    "\n",
+    "for k, u0_true in enumerate(u0_grid):\n",
+    "    out_name = f\"scan_kepler_u0_{k:03d}.npz\"\n",
+    "\n",
+    "    run_grid_and_save_npz_kepler(\n",
+    "        out_npz_path=out_name,\n",
+    "        t=t,\n",
+    "        t0_true=t0_true,\n",
+    "        u0_true=float(u0_true),      # <-- [CAMBIO CLAVE] barrido en u0\n",
+    "        tE_true=tE_true,\n",
+    "        phi_true=phi_true,\n",
+    "        i_true=float(lambda_xi_fixed),   # <-- fijo: lambda_xi = pi/2\n",
+    "        qflux_true=qflux_true,\n",
+    "        theta_true=theta_true,\n",
+    "        M1_Msun=M1,\n",
+    "        M2_Msun=M2,\n",
+    "        rEhat_AU=rEhat,\n",
+    "        P_grid=P_grid,\n",
+    "        fsource_true=1.0,\n",
+    "        fblend_true=0.0,\n",
+    "        override_xiE=None,               # Kepler-consistente\n",
+    "        set_flux_from_truth_photometry=True,\n",
+    "        rms_on_magnification=True,\n",
+    "    )\n",
+    "\n",
+    "print(\"scan on u0 finished (lambda_xi fixed to pi/2).\")"
+   ]
   }
  ],
  "metadata": {
